[gd_scene load_steps=8 format=2]

[ext_resource path="res://Systems/Settings/set_0.tscn" type="PackedScene" id=1]
[ext_resource path="res://Systems/Settings/SettingsSaver.gd" type="Script" id=2]
[ext_resource path="res://Systems/Settings/SettingsUI.gd" type="Script" id=3]
[ext_resource path="res://assets/br/BR-GAMEBOARD-FINAL-02.png" type="Texture" id=4]
[ext_resource path="res://Theme/theme_monserati_m.tres" type="Theme" id=5]
[ext_resource path="res://Systems/Settings/SetUiLoader.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.117647, 0.141176, 0.156863, 0.705882 )
expand_margin_top = 25.0

[node name="SettingsUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
theme = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
pu = NodePath("pu")
res = NodePath("pu/tabs/Simple/DisplayResolution/OptionButton")
gq = NodePath("pu/tabs/Simple/GraphicsQuality/OptionButton")
sul = NodePath("pu/tabs/Advanced/vb")

[node name="SettingsSaver" type="Node" parent="."]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = -418.929
margin_top = -324.957
margin_right = 1743.07
margin_bottom = 1007.04
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pu" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.0
margin_top = -155.0
margin_right = 243.0
margin_bottom = 155.0
rect_min_size = Vector2( 300, 220 )
custom_styles/panel = SubResource( 1 )
window_title = "Settings"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tabs" type="TabContainer" parent="pu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Advanced" type="ScrollContainer" parent="pu/tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 36.0
margin_right = -5.0
margin_bottom = -5.0
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vb" type="VBoxContainer" parent="pu/tabs/Advanced"]
margin_right = 466.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
c_shading = NodePath("shading/set_check_box")
c_shade_table = NodePath("shade_table/set_check_box")
o_msaa = NodePath("msaa/set_option_button")
o_ao = NodePath("ao/set_option_button")
c_dof = NodePath("dof_near/set_check_box")
c_ssr = NodePath("ssr/set_check_box")
c_glow = NodePath("glow/set_check_box")

[node name="shading" parent="pu/tabs/Advanced/vb" instance=ExtResource( 1 )]
margin_right = 466.0

[node name="set_label" parent="pu/tabs/Advanced/vb/shading" index="0"]
margin_right = 231.0
text = "Shading"

[node name="set_option_button" parent="pu/tabs/Advanced/vb/shading" index="2"]
visible = false

[node name="set_check_box" parent="pu/tabs/Advanced/vb/shading" index="3"]
visible = true
margin_left = 235.0
margin_right = 466.0

[node name="shade_table" parent="pu/tabs/Advanced/vb" instance=ExtResource( 1 )]
margin_top = 33.0
margin_right = 466.0
margin_bottom = 62.0

[node name="set_label" parent="pu/tabs/Advanced/vb/shade_table" index="0"]
margin_right = 231.0
text = "Shade Table"

[node name="set_option_button" parent="pu/tabs/Advanced/vb/shade_table" index="2"]
visible = false

[node name="set_check_box" parent="pu/tabs/Advanced/vb/shade_table" index="3"]
visible = true
margin_left = 235.0
margin_right = 466.0

[node name="msaa" parent="pu/tabs/Advanced/vb" instance=ExtResource( 1 )]
margin_top = 66.0
margin_right = 466.0
margin_bottom = 95.0

[node name="set_label" parent="pu/tabs/Advanced/vb/msaa" index="0"]
margin_right = 231.0
text = "Anti-aliasing (MSAA)"

[node name="set_option_button" parent="pu/tabs/Advanced/vb/msaa" index="2"]
margin_left = 235.0
margin_right = 466.0
text = "Disabled"
items = [ "Disabled", null, false, 0, null, "2x", null, false, 1, null, "4x", null, false, 2, null, "8x", null, false, 3, null, "16x", null, false, 4, null ]
selected = 0

[node name="ao" parent="pu/tabs/Advanced/vb" instance=ExtResource( 1 )]
margin_top = 99.0
margin_right = 466.0
margin_bottom = 128.0

[node name="set_label" parent="pu/tabs/Advanced/vb/ao" index="0"]
margin_right = 231.0
text = "Ambient occlusion"

[node name="set_option_button" parent="pu/tabs/Advanced/vb/ao" index="2"]
margin_left = 235.0
margin_right = 466.0
text = "Disabled"
items = [ "Disabled", null, false, 0, null, "Medium-quality", null, false, 1, null, "High-quality", null, false, 2, null ]
selected = 0

[node name="ssao_blur" parent="pu/tabs/Advanced/vb" instance=ExtResource( 1 )]
visible = false
margin_top = 132.0
margin_bottom = 161.0

[node name="set_label" parent="pu/tabs/Advanced/vb/ssao_blur" index="0"]
text = "Ambient occlusion Blur"

[node name="set_option_button" parent="pu/tabs/Advanced/vb/ssao_blur" index="2"]
text = "Disabled"
items = [ "Disabled", null, false, 0, null, "1x1", null, false, 1, null, "2x2", null, false, 2, null, "3x3", null, false, 3, null ]
selected = 0

[node name="ssr" parent="pu/tabs/Advanced/vb" instance=ExtResource( 1 )]
margin_top = 132.0
margin_right = 466.0
margin_bottom = 161.0

[node name="set_label" parent="pu/tabs/Advanced/vb/ssr" index="0"]
margin_right = 231.0
text = "Screen-space reflections"

[node name="set_option_button" parent="pu/tabs/Advanced/vb/ssr" index="2"]
visible = false

[node name="set_check_box" parent="pu/tabs/Advanced/vb/ssr" index="3"]
visible = true
margin_left = 235.0
margin_right = 466.0

[node name="bloom" parent="pu/tabs/Advanced/vb" instance=ExtResource( 1 )]
visible = false
margin_top = 165.0
margin_right = 466.0
margin_bottom = 194.0

[node name="set_label" parent="pu/tabs/Advanced/vb/bloom" index="0"]
margin_right = 231.0
text = "Bloom"

[node name="set_option_button" parent="pu/tabs/Advanced/vb/bloom" index="2"]
visible = false

[node name="set_check_box" parent="pu/tabs/Advanced/vb/bloom" index="3"]
visible = true
margin_left = 235.0
margin_right = 466.0

[node name="set_spin_box" parent="pu/tabs/Advanced/vb/bloom" index="5"]
margin_left = 371.0
margin_right = 447.0

[node name="dof_near" parent="pu/tabs/Advanced/vb" instance=ExtResource( 1 )]
margin_top = 165.0
margin_right = 466.0
margin_bottom = 194.0

[node name="set_label" parent="pu/tabs/Advanced/vb/dof_near" index="0"]
margin_right = 231.0
text = "Depth-of-field Near Blur"

[node name="set_option_button" parent="pu/tabs/Advanced/vb/dof_near" index="2"]
visible = false

[node name="set_check_box" parent="pu/tabs/Advanced/vb/dof_near" index="3"]
visible = true
margin_left = 235.0
margin_right = 466.0

[node name="glow" parent="pu/tabs/Advanced/vb" instance=ExtResource( 1 )]
margin_top = 198.0
margin_right = 466.0
margin_bottom = 227.0

[node name="set_label" parent="pu/tabs/Advanced/vb/glow" index="0"]
margin_right = 231.0
text = "Glow"

[node name="set_option_button" parent="pu/tabs/Advanced/vb/glow" index="2"]
visible = false

[node name="set_check_box" parent="pu/tabs/Advanced/vb/glow" index="3"]
visible = true
margin_left = 235.0
margin_right = 466.0

[node name="Simple" type="VBoxContainer" parent="pu/tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 36.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphicsQuality" type="HBoxContainer" parent="pu/tabs/Simple"]
margin_right = 536.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="pu/tabs/Simple/GraphicsQuality"]
margin_right = 256.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Graphics quality"

[node name="OptionButton" type="OptionButton" parent="pu/tabs/Simple/GraphicsQuality"]
margin_left = 280.0
margin_right = 536.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Low"
items = [ "Low", null, false, 0, null, "Medium", null, false, 1, null, "High", null, false, 2, null, "Ultra", null, false, 3, null ]
selected = 0

[node name="DisplayResolution" type="HBoxContainer" parent="pu/tabs/Simple"]
margin_top = 34.0
margin_right = 536.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="pu/tabs/Simple/DisplayResolution"]
margin_right = 256.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Display resolution"

[node name="OptionButton" type="OptionButton" parent="pu/tabs/Simple/DisplayResolution"]
margin_left = 280.0
margin_right = 536.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="space" type="Label" parent="pu/tabs/Simple"]
margin_top = 68.0
margin_right = 536.0
margin_bottom = 97.0

[node name="space3" type="Label" parent="pu/tabs/Simple"]
margin_top = 101.0
margin_right = 536.0
margin_bottom = 130.0

[node name="space2" type="Label" parent="pu/tabs/Simple"]
margin_top = 134.0
margin_right = 536.0
margin_bottom = 163.0

[connection signal="check_box_toggled" from="pu/tabs/Advanced/vb/shading" to="." method="_on_shading_check_box_toggled"]
[connection signal="check_box_toggled" from="pu/tabs/Advanced/vb/shade_table" to="." method="_on_shade_table_check_box_toggled"]
[connection signal="option_button_item_selected" from="pu/tabs/Advanced/vb/msaa" to="." method="_on_msaa_option_button_item_selected"]
[connection signal="option_button_item_selected" from="pu/tabs/Advanced/vb/ao" to="." method="_on_ao_option_button_item_selected"]
[connection signal="option_button_item_selected" from="pu/tabs/Advanced/vb/ssao_blur" to="." method="_on_ssao_blur_option_button_item_selected"]
[connection signal="check_box_toggled" from="pu/tabs/Advanced/vb/ssr" to="." method="_on_ssr_check_box_toggled"]
[connection signal="check_box_toggled" from="pu/tabs/Advanced/vb/dof_near" to="." method="_on_dof_near_check_box_toggled"]
[connection signal="check_box_toggled" from="pu/tabs/Advanced/vb/glow" to="." method="_on_glow_check_box_toggled"]
[connection signal="item_selected" from="pu/tabs/Simple/GraphicsQuality/OptionButton" to="." method="_on_graphics_preset_change"]
[connection signal="item_selected" from="pu/tabs/Simple/DisplayResolution/OptionButton" to="." method="_on_resolution_changed"]

[editable path="pu/tabs/Advanced/vb/shading"]
[editable path="pu/tabs/Advanced/vb/shade_table"]
[editable path="pu/tabs/Advanced/vb/msaa"]
[editable path="pu/tabs/Advanced/vb/ao"]
[editable path="pu/tabs/Advanced/vb/ssao_blur"]
[editable path="pu/tabs/Advanced/vb/ssr"]
[editable path="pu/tabs/Advanced/vb/bloom"]
[editable path="pu/tabs/Advanced/vb/dof_near"]
[editable path="pu/tabs/Advanced/vb/glow"]
